<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@color/title_backgroud"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_selector"
            android:src="@drawable/back" />

        <com.xpread.widget.RobotoTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:gravity="center_vertical"
            android:text="@string/share_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            roboto:textfont="regular" />
    </RelativeLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/title_share"
        android:background="@drawable/shadow_up" />

    <com.xpread.widget.ShareViewgroup
        android:id="@+id/share_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/shadow" >

        <com.xpread.widget.RoundImageButton
            android:id="@+id/qrcode_button"
            android:layout_width="@dimen/share_circle_size"
            android:layout_height="@dimen/share_circle_size"
            imagecontrol:background_color="#ffffff"
            imagecontrol:border_color="#7f0399"
            imagecontrol:border_width="1dp"
            imagecontrol:image_resource="@drawable/share_qrcode"
            imagecontrol:padding_between="14dp"
            imagecontrol:text="@string/share_by_qrcode"
            imagecontrol:text_color="#7f0399"
            imagecontrol:text_size="20dp" />

        <com.xpread.widget.RoundImageButton
            android:id="@+id/bluetooth_button"
            android:layout_width="@dimen/share_circle_size"
            android:layout_height="@dimen/share_circle_size"
            imagecontrol:background_color="#ffffff"
            imagecontrol:border_color="#2589db"
            imagecontrol:border_width="1dp"
            imagecontrol:image_resource="@drawable/bluetooth"
            imagecontrol:padding_between="14dp"
            imagecontrol:text="@string/share_by_bluetooth"
            imagecontrol:text_color="#2589db"
            imagecontrol:text_size="20dp" />
    </com.xpread.widget.ShareViewgroup>

</RelativeLayout>