<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_wait_friend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@color/title_backgroud"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_selector"
            android:src="@drawable/back" />

        <com.xpread.widget.RobotoTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:gravity="center_vertical"
            android:text="@string/wait_friend_title"
            android:textColor="#ffffff"
            android:textSize="20dp"
            roboto:textfont="regular" />
    </RelativeLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/title_wait_friend"
        android:background="@drawable/shadow_up" />

    <com.xpread.widget.WaitFriendViewgroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_wait_friend"
        android:background="#fafafa" >

        <com.xpread.widget.CircleBackgroudView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/radar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/radar_green_2" />
        <!--
              <com.ucweb.xpread.widget.RadarView
            android:id="@+id/radar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />
        -->

        <com.xpread.widget.RoundImageView
            android:id="@+id/user_icon"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/female_01" />

        <com.xpread.widget.RobotoTextView
            android:id="@+id/wait_hint_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wait_friend_hint_open"
            android:textSize="18sp" />

        <com.xpread.widget.RobotoTextView
            android:id="@+id/wait_hint_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/wait_friend_hint_receive"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/wait_cancel"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/stop_selector" />

        <ImageView
            android:id="@+id/circle_bule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_green"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/circle_blue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_green"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/circle_blue3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_green"
            android:visibility="gone" />
    </com.xpread.widget.WaitFriendViewgroup>

</RelativeLayout>