<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    xmlns:round_progress="http://schemas.android.com/apk/res-auto"
    xmlns:circle_track="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentTop="true"
        android:background="@color/title_backgroud"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <ImageView
            android:id="@+id/menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_selector"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_selector"
            android:src="@drawable/share_copy" />

        <com.xpread.widget.RobotoTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_toLeftOf="@id/share"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            roboto:textfont="regular" />
    </RelativeLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_main" >

        <!-- The main content view -->

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/user_opra"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_opra_height"
                android:layout_alignParentBottom="true"
                android:background="#fafafa"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <com.xpread.widget.RoundImageButton
                    android:id="@+id/send_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/user_opra_button_side"
                    android:layout_weight="1"
                    android:gravity="center"
                    imagecontrol:background_color="#e7f0f7"
                    imagecontrol:border_color="#0277d6"
                    imagecontrol:border_width="1dp"
                    imagecontrol:image_offset_x="5dp"
                    imagecontrol:image_resource="@drawable/send"
                    imagecontrol:padding_between="10dp"
                    imagecontrol:text="@string/send_button"
                    imagecontrol:text_color="#0277d6"
                    imagecontrol:text_size="@dimen/user_opra_button_textsize" />

                <com.xpread.widget.RoundImageButton
                    android:id="@+id/receive_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/user_opra_button_side"
                    android:layout_weight="1"
                    android:gravity="center"
                    imagecontrol:background_color="#e6f3ef"
                    imagecontrol:border_color="#00a168"
                    imagecontrol:border_width="1dp"
                    imagecontrol:image_offset_x="-5dp"
                    imagecontrol:image_resource="@drawable/recieve"
                    imagecontrol:padding_between="10dp"
                    imagecontrol:text="@string/receive_button"
                    imagecontrol:text_color="#00a168"
                    imagecontrol:text_size="@dimen/user_opra_button_textsize" />

                <com.xpread.widget.RoundImageButton
                    android:id="@+id/disconnect_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/user_opra_button_side"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    imagecontrol:background_color="#f9ece9"
                    imagecontrol:border_color="#ef431b"
                    imagecontrol:border_width="1dp"
                    imagecontrol:image_resource="@drawable/disconnet"
                    imagecontrol:padding_between="10dp"
                    imagecontrol:text="@string/disconnect_button"
                    imagecontrol:text_color="#ef431b"
                    imagecontrol:text_size="@dimen/user_opra_button_textsize" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignTop="@id/user_opra"
                android:background="@drawable/shadow_up" />

            <RelativeLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/user_opra"
                android:background="@drawable/main_image" >

                <com.xpread.widget.RoundImageView
                    android:id="@+id/user_icon"
                    android:layout_width="@dimen/user_icon_side"
                    android:layout_height="@dimen/user_icon_side"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/user_icon_top"
                    android:src="@drawable/female_01" />

                <com.xpread.widget.RobotoTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="@dimen/user_name_size"
                    roboto:textfont="regular" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_info_connected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/user_opra"
                android:background="@drawable/main_image"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <com.xpread.widget.RoundImageView
                    android:id="@+id/owner_icon"
                    android:layout_width="@dimen/user_icon_connected_side"
                    android:layout_height="@dimen/user_icon_connected_side"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/female_01" />

                <ImageView
                    android:id="@+id/wait_connect_circle_view1"
                    android:layout_width="@dimen/wait_circle_size"
                    android:layout_height="@dimen/wait_circle_size"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/first_circle_top"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/wait_connect_circle_view2"
                    android:layout_width="@dimen/wait_circle_size"
                    android:layout_height="@dimen/wait_circle_size"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/second_circle_top"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/wait_connect_circle_view3"
                    android:layout_width="@dimen/wait_circle_size"
                    android:layout_height="@dimen/wait_circle_size"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/third_circle_top"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/wait_connect_circle_view4"
                    android:layout_width="@dimen/wait_circle_size"
                    android:layout_height="@dimen/wait_circle_size"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/fourth_circle_top"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/wait_connect_circle_view5"
                    android:layout_width="@dimen/wait_circle_size"
                    android:layout_height="@dimen/wait_circle_size"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/fiveth_circle_top"
                    android:visibility="gone" />

                <com.xpread.widget.RoundImageView
                    android:id="@+id/guest_icon"
                    android:layout_width="@dimen/guest_icon_connected_side"
                    android:layout_height="@dimen/guest_icon_connected_side"
                    android:layout_below="@id/owner_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/guest_icon_top"
                    android:src="@drawable/female_02" />

                <com.xpread.widget.RobotoTextView
                    android:id="@+id/guest_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/guest_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/guest_name_top"
                    android:textColor="#333333"
                    android:textSize="@dimen/guest_name_size" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignTop="@id/user_info"
                android:background="@drawable/shadow_up" />

            <FrameLayout 
                android:id="@+id/history_background"
                android:layout_width="@dimen/user_history_icon_side"
                android:layout_height="@dimen/user_history_icon_side"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/user_opra"
                android:layout_marginRight="16dp"
                android:layout_marginTop="@dimen/user_history_icon_top"
                android:background="@drawable/history"
                >
                
                <ImageView
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/user_history_icon_padding"
                    android:src="@drawable/icon_history"
                    />
                
            </FrameLayout>
  <!--            <ImageView
                android:id="@+id/user_history"
                android:layout_width="@dimen/user_history_icon_side"
                android:layout_height="@dimen/user_history_icon_side"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/user_opra"
                android:layout_marginRight="16dp"
                android:layout_marginTop="@dimen/user_history_icon_top"
                android:background="@drawable/history_selector"
                android:padding="@dimen/user_history_icon_padding"
                android:src="@drawable/icon_history" />  -->
        </RelativeLayout>

        <!-- The navigation drawer -->

        <RelativeLayout
            android:id="@+id/drawer_content"
            android:layout_width="@dimen/drawer_content_width"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="left"
            android:background="#ffffff" >

            <ListView
                android:id="@+id/drawer_listvew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:divider="#e4e4e4"
                android:dividerHeight="0.5dp" />

            <com.xpread.widget.RobotoTextView
                android:id="@+id/drawer_bottom_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="#999999"
                android:textSize="14sp" />

            <!-- divider above the textview -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_above="@id/drawer_bottom_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>